2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* evaluate the env variables FUSHM_KEYFILE and FUSEM_KEYFILE and
	use these values instead of /dev/null, to allow several brokers on
	the same machine (Kurt)
	* add accessors nRawCells(), nRecoCells(), nDqmCells()

2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* add Kurt's changes
	* add fuProcessId and fuGuid to reco and dqm cell records
	* incorporate both fields in FUShmBuffer
	* add lumi block number (as a placeholder for now) to FUShmBuffer
	* add version number for error event data format
	

2008-06-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-06
	* fix to error event sending: set the discard counter to 1 (not
	2), since no client will ever schedule the raw cell for
	discard.

2008-06-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-05
	* update FUShmBuffer/FUShmRecoCell, pass outModId when the INIT
	message is written

2008-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-04
	* update to FUShmBuffer::writeErrorEventData()

2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-03
	* bugfix: remove assert statement from
	FUShmBuffer::discardRecoEvent()

2008-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-02
	* bug fix for deregistration of client process ids

2008-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-01
	* fix registration of several EP process ids: nClients_ set to 0
	in reset(), _NOT_ ctor

2008-01-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* add 'outModId' to FUShmRecoCell
	* add outModId to interface of FUShmBuffer::writeRecoEventData()
	* add new function 'FUShmBuffer::writeErrorEventData'

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01